# sonify

./: .env.example  .gitignore  CLAUDE.md  README.md  SCIENCE.md  elevenlabs_bridge.py  lyria_bridge.py  pyproject.toml  requirements.txt  server.py
data_sources/: live_weather.py  simulators.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md
lenses/: __init__.py  atmosphere.py  base.py  flow.py  lattice.py  pulse.py
static/: index.html  worklet.js
tests/: conftest.py  test_control_state.py  test_elevenlabs_bridge.py  test_lenses.py  test_mock_audio.py  test_server.py  test_simulators.py
