[project]
name = "synaesthesia-engine"
version = "0.1.0"
description = "Hear what numbers hide. See what sound reveals."
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
]

[project.scripts]
synaesthesia = "server:main"
