[project]
name = "sonify"
version = "0.1.0"
description = "Hear what numbers hide. See what sound reveals."
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "elevenlabs",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
]

[project.scripts]
sonify = "server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
